--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nextjsweb.fullname" . }}
-  labels:
-    {{- include "nextjsweb.labels" . | nindent 4 }}
+  name: {{include "nextjsweb.fullname" .}}
+  labels: {{- include "nextjsweb.labels" . | nindent 4}}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{.Values.service.type}}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{.Values.service.port}}
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    {{- include "nextjsweb.selectorLabels" . | nindent 4 }}
+  selector: {{- include "nextjsweb.selectorLabels" . | nindent 4}}
