--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^18.2.0",
     "react-daisyui": "^2.4.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "recharts": "2.1.16",
