finish lottery page pass

--- a/.dappd.json
+++ b/.dappd.json
@@ -30,7 +30,7 @@
     "metadata": {
       "title": null,
       "description": null,
-      "siteName": "Dappd Seed App",
+      "siteName": "PVP Games",
       "ogImage": null,
       "ogImageHeight": null,
       "ogImageWidth": null,
