--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ethers": "^5.7.2",
     "events": "^3.3.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.16.5",
     "lodash": "^4.17.21",
     "next": "^13.0.3",
     "postcss-flexbugs-fixes": "^5.0.2",
